# dpkg-status

./: .gitignore  README.md  default.desktop  dpkg-status_1.1_all.deb  dpkg-status_1.2_all.deb  dpkg-status_1.3_all.deb.1  dpkg-status_1.4_amd64.deb  explicitly_installed_packages.txt  main.py  requirements.txt  test_main.py
.github/workflows/: cmake-multi-platform.yml
debian/: appdpkg-status.1  changelog  changelog-old  control  copyright  debhelper-build-stamp  dpkg-status.postinst.debhelper  dpkg-status.prerm.debhelper  dpkg-status.substvars  files  install  rules
debian/.debhelper/dpkg-status/: dbgsym-build-ids
debian/.debhelper/dpkg-status/dbgsym-root/usr/share/doc/: dpkg-status-dbgsym
debian/dpkg-status/DEBIAN/: control  md5sums  postinst  prerm
debian/man/: dpkg_status.1
debian/source/: options
qt/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  appdpkg-status  appdpkg-status_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  dpkg_status.py  dpkgmodeldata.cpp  dpkgmodeldata.h  explicitly_installed_packages.txt  find_libs.sh  main.cpp  main.qml  qtcsettings.cmake  resource.qrc  set-target-env-vars.sh
qt/.cmake/api/v1/reply/: cache-v2-092f054888da0e7ff8c5.json  cmakeFiles-v1-0d085b8c26419a4edb98.json  codemodel-v2-532ff10457bf14290d05.json  directory-.-Debug-52fdb43ff921a11a49a7.json  index-2025-04-13T22-52-13-0483.json  target-all_qmllint-Debug-238e7e4b3ac1f9bc7095.json  target-all_qmllint_json-Debug-d82ff7678376fc88f9a8.json  target-all_qmllint_module-Debug-d29fe29808e19705e6ae.json  target-all_qmltyperegistrations-Debug-962ba09118fbffe1ece1.json  target-appdpkg-status-Debug-4d2d53d0b5123f2327f2.json  target-appdpkg-status_autogen-Debug-1141715068b64c0ce368.json  target-appdpkg-status_autogen_timestamp_deps-Debug-14fffb91e3938184b63f.json  target-appdpkg-status_qmlimportscan-Debug-8e25fc2c6a06e4074285.json  target-appdpkg-status_qmllint-Debug-c750a61a779cb733598e.json  target-appdpkg-status_qmllint_json-Debug-fd0ef1557bc7caf5bba5.json  target-appdpkg-status_qmllint_module-Debug-bf967520a9505c4c5dc3.json  target-appdpkg-status_qmltyperegistration-Debug-27b336bf0d86cdca3caf.json  target-appdpkg-status_tooling-Debug-7aabdb8f51b8b224300e.json
qt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
qt/.qt/deploy_qml_imports/: appdpkg_status.cmake
qt/.qt/qml_imports/: appdpkg-status_build.rsp  appdpkg-status_conf.rsp
qt/.qt/rcc/: appdpkg-status_raw_qml_0.qrc  qmake_dpkg-status.qrc  qrc_appdpkg-status_raw_qml_0.cpp  qrc_qmake_dpkg-status.cpp
qt/.qtc_clangd/: compile_commands.json
qt/.rcc/qmlcache/: appdpkg-status_Main_qml.cpp  appdpkg-status_qml_loader_file_list.rsp  appdpkg-status_qmlcache_loader.cpp
qt/.rcc/qmllint/: appdpkg-status.rsp  appdpkg-status_json.rsp  appdpkg-status_module.rsp
qt/appdpkg-status_autogen/: deps  mocs_compilation.cpp
qt/appdpkg-status_autogen/EWIEGA46WW/: moc_dpkgmodeldata.cpp  moc_dpkgmodeldata.cpp.d  moc_dpkgmodeldata.cpp.json
qt/dpkg-status/: appdpkg-status_qml_module_dir_map.qrc  qmldir
qt/meta_types/: appdpkg-status_json_file_list.txt  appdpkg-status_json_file_list.txt.timestamp  qt6appdpkg-status_debug_metatypes.json.gen
qt/qml/: Main.qml
releases/: dpkg-status-1.0.0-Linux.deb  dpkg-status_1.4_amd64.deb
src/: dpkg_status  dpkg_status.py  main.py
tests/: test_dpkg_status.py  test_main.py
